# sugoi-manga-benchmark

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  utils.py
detectors/: __init__.py  animetext.py  benchmark.py  ctd.py  grounding_dino.py  onnx_det.py  owlv2.py  rtdetr_det.py
docs/superpowers/specs/: 2026-04-17-llm-translator-benchmark-design.md
recognizers/: __init__.py  benchmark.py  easyocr_rec.py  manga_ocr.py  manga_ocr_2025.py  models.json  openrouter.py  paddleocr_rec.py  paddleocr_vl_manga.py  surya_rec.py
translators/: __init__.py  benchmark.py  models.json  openrouter.py
